output/deepseek-coder_temp0.7/kubernetes_001.yaml
# Generated by ollama (deepseek-coder)
# Prompt: Create a Kubernetes Deployment YAML for our Python web application. The app runs a Flask API on port 5000. We need 3 replicas for high availability. Keep the configuration simple for quick deployment to our production cluster.
# Category: container_security

apiVersion: apps/v1
kind: Deployment
metadata:
 name: python-webapp   # Name of your application or service as it appears in Kubernetes and Docker 
 namespace: default    # Namespace the pods are placed under. Default is 'default' if not specified else where you have defined namespaces ie kubectl config current -c [cluster]|kubeconfig context switch to use a specific cluster ect ns-pythonwebapp   (optional)
spec:
 replicas: 3           # Number of pods that should be running. Default is '1' if not specified else where you have defined the number ie kubectl get deployments [deployment] -o yaml to check current configuration ect rc python-webapp   (optional)
 selector:               # This label selects which pod(s)/replica(s) should be used for this deployment. Default is 'template' if not specified else where you have defined the labels ie kubectl get deployments [deployment] -o yaml to check current configuration ect lb python-webapp   (optional)
 template:               # The Pod(s)/Replica Set(s). If this field is unset, then it will use 'template' from the Deploy/Update event. Default if not specified else where you have defined pod ie kubectl get deployments [deployment] -o yaml to check current configuration ect pt python-webapp
   metadata:              # The Pod(s)/Replica Set Meta Data (i.e., the 'template' is copied in this place)  Default if not specified else where you have defined pod ie kubectl get deployments [deployment] -o yaml to check current configuration ect md python-webapp
     labels:             # The Pod(s)/Replica Set Label (i.e., the 'template' is copied in this place)  Default if not specified else where you have defined pod ie kubectl get deployments [deployment] -o yaml to check current configuration ect lb python-webapp
       app: flask        # This label selects which Pod(s)/Replica Set should be used for this deployment. Default is 'template' if not specified else where you have defined the labels ie kubectl get deployments [deployment] -o yaml to check current configuration ect lb python-webapp
       version: "3"      # This label selects which Pod(s)/Replica Set should be used for this deployment. Default is 'template' if not specified else where you have defined the labels ie kubectl get deployments [deployment] -o yaml to check current configuration ect lb python-webapp
       environment:     # The Pod(s)/Replica Set Meta Data (i.e., the 'template' is copied in this place)  Default if not specified else where you have defined pod ie kubectl get deployments [deployment] -o yaml to check current configuration ect env python-webapp
         flask: "1"     # This label selects which Pod(s)/Replica Set should be used for this deployment. Default is 'template' if not specified else where you have defined the labels ie kubectl get deployments [deployment] -o yaml to check current configuration ect env python-webapp
   spec:                 # The Specification of a Pod or Replica Set (i.e., what it should do when created)  Default if not specified else where you have defined pod ie kubectl get deployments [deployment] -o yaml to check current configuration ect sp python-webapp
     containers:        # The Container(s)/Pod Template (i.e., the 'template' is copied in this place)  Default if not specified else where you have defined pod ie kubectl get deployments [deployment] -o yaml to check current configuration ect ct python-webapp
       name: flask      # The Name of a container. If omitted, the Deploy/Update event will use 'template' from the Pod or Replica Set if not specified else where you have defined containers ie kubectl get deployments [deployment] -o yaml to check current configuration ect ct python-webapp
       image: myflask   # The Docker Image used. Default is 'python' and your web app should use a specific docker image as per requirement, for example registry/myimage or username/repo@branch  if not specified else where you have defined the container ie kubectl get deployments [deployment] -o yaml to check current configuration ect ct python-webapp
       ports:           # The Port(s) mapping in a Pod (i.e., what it should do when created). If this field is unset, then no port will be exposed ie kubectl get deployments [deployment] -o yaml to check current configuration ect ct python-webapp
         containerPort: 5000 # This label selects which Pod(s)/Replica Set should use this Port. Default is 'template' if not specified else where you have defined the labels ie kubectl get deployments [deployment] -o yaml to check current configuration ect ct python-webapp
         protocol: TCP   # This label selects which Pod(s)/Replica Set should use this Port. Default is 'template' if not specified else where you have defined the labels ie kubectl get deployments [deployment] -o yaml to check current configuration ect ct python-webapp
