output/deepseek-coder_temp0.7/modern_istio_001.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name : mtls-authpolicy 
spec:
  selector: {} # select all microservices in your namespace, if you are not using multi service mesh just use "*" like below -> selector: {serviceName:"*",namespaceName:'your_microservicemesh'} and replace '<Your Namespace Name Here' with the name of Kubernetes Service Mesh
  action: ALLOW # set to PERMISSIVE or DENY, depending on your requirements. By default it is ALLOW if not specified otherwise (optional)  
 rules:    
 - from: [ "*" ]
